syntax = "proto3";

package examples.kitchensink.v1;

import "google/type/datetime.proto";

message Nested {
  string test = 1;
}

message TestRequest {
  string name = 1;
}

message TestResponse {
  string greeting = 1;
  Nested inner = 2;
  repeated Nested thingies = 3;
  repeated string greetings = 4;
  bool bool_kind = 5;
  int32 int32_kind = 6;
  sint32 sint32_kind = 7;
  bytes bytes_kind = 8;
  float float_kind = 10;
  Status status = 11;
  google.type.DateTime created_at = 12;
  double double_kind = 13;
}

service TestService {
  rpc Test(TestRequest) returns (TestResponse) {}
}

enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_OK = 1;
  STATUS_NOT_OK = 2;
}

message StatusRequest {}

message StatusResponse {
  Status status = 1;
}

service StatusService {
  rpc Status(StatusRequest) returns (StatusResponse) {}
}